index.html: Добавлен список предостовляемых услуг

--- a/index.html
+++ b/index.html
@@ -67,5 +67,30 @@
       </nav>
     </header>
 
+    <main class="container">
+      <ul class="services">
+        <li class="materials new">
+          <img src="#" alt="Материалы"  width="300" height="123">
+          <a href="#" class="btn">На любой вкус</a>
+        </li>
+        <li class="tools">
+          <img src="#" alt="Инструмент"  width="300" height="123">
+          <a href="#" class="btn">На все случаи</a>
+        </li>
+        <li class="equipment">
+          <img src="#" alt="Техника" width="300" height="123">
+          <a href="#" class="btn">Для стройки</a>
+        </li>
+        <li>
+          <img src="#" alt="Скидки 50%" width="300" height="123">
+          <a href="#" class="btn">На 350 товаров</a>
+        </li>
+        <li>
+          <img src="#" alt="Доставка" width="300" height="123">
+          <a href="#" class="btn">Бесплатно</a>
+        </li>
+      </ul>
+    </main>
+
   </body>
 </html>
