index.html: добавлен СЛАЙДЕР

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </header>
 
     <main class="container">
+
       <ul class="services">
         <li class="materials new">
           <img src="#" alt="Материалы"  width="300" height="123">
@@ -90,6 +91,29 @@
           <a href="#" class="btn">Бесплатно</a>
         </li>
       </ul>
+
+      <!--СЛАЙДЕР-->
+      <div class="slider">
+
+        <div class="slide1">
+          <p>Перфораторы</p>
+          <div class="btn">
+            <a href="#">Открыть каталог</a>
+          </div>
+        </div>
+
+        <div class="slide2">
+          <p>Дрели</p>
+          <div class="btn">
+            <a href="#">Открыть каталог</a>
+          </div>
+        </div>
+        
+        <div class="indicator"></div>
+      </div><!--rконец СЛАЙДЕР-->
+
+      
+
     </main>
 
   </body>
