--- a/index.html
+++ b/index.html
@@ -112,7 +112,36 @@
         <div class="indicator"></div>
       </div><!--rконец СЛАЙДЕР-->
 
-      
+      <section>
+
+        <div class="wrapper">
+          <h2>Популярные товары</h2>
+          <a href="#" class="btn popular">Все популярные товары</a>
+        </div>
+        
+        <ul>
+          <li>
+            <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 9000" width="220" height="318" ></a>
+            <p><s class="old-price">32500</s></p>
+            <p class="new-price">25500</p>
+          </li>
+          <li>
+            <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="220" height="318"></a>
+            <p><s class="old-price">22500</s></p>
+            <p class="new-price">15500</p>
+          </li>
+          <li>
+            <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="220" height="318"></a>
+            <p><s class="old-price">30500</s></p>
+            <p class="new-price">25500</p>
+          </li>
+          <li>
+            <a href="#"><img src="img/" class="new" alt="Перфоратор BOSH BFG 2000" width="220" height="318"></a>
+            <p><s class="old-price"></s></p>
+            <p class="new-price">12500</p>
+          </li>
+        </ul>
+      </section>
 
     </main>
 
