index.html: Добвлены ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ исправлены ошибки

--- a/index.html
+++ b/index.html
@@ -69,25 +69,25 @@
 
     <main class="container">
 
-      <ul class="services">
+      <ul class="propositions">
         <li class="materials new">
-          <img src="#" alt="Материалы"  width="300" height="123">
+          <div><img src="#" alt="Материалы"  width="300" height="123"></div>
           <a href="#" class="btn">На любой вкус</a>
         </li>
         <li class="tools">
-          <img src="#" alt="Инструмент"  width="300" height="123">
+          <div><img src="#" alt="Инструмент"  width="300" height="123"></div>
           <a href="#" class="btn">На все случаи</a>
         </li>
         <li class="equipment">
-          <img src="#" alt="Техника" width="300" height="123">
+          <div><img src="#" alt="Техника" width="300" height="123"></div>
           <a href="#" class="btn">Для стройки</a>
         </li>
         <li>
-          <img src="#" alt="Скидки 50%" width="300" height="123">
+          <div><img src="#" alt="Скидки 50%" width="300" height="123"></div>
           <a href="#" class="btn">На 350 товаров</a>
         </li>
         <li>
-          <img src="#" alt="Доставка" width="300" height="123">
+          <div><img src="#" alt="Доставка" width="300" height="123"></div>
           <a href="#" class="btn">Бесплатно</a>
         </li>
       </ul>
@@ -112,6 +112,7 @@
         <div class="indicator"></div>
       </div><!--rконец СЛАЙДЕР-->
 
+     <!--ПОПУЛЯРНЫЕ ТОВАРЫ-->
       <section>
 
         <div class="wrapper">
@@ -141,7 +142,28 @@
             <p class="new-price">12500</p>
           </li>
         </ul>
-      </section>
+      </section><!--конец ПОПУЛЯРНЫЕ ТОВАРЫ-->
+
+      <!--ПЛПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ-->
+      <section>
+        <div class="wrapper">
+          <h2>Популярные производители</h2>
+          <a href="btn popular"></a>
+        </div>
+
+        <ul>
+          <li>
+            <a href="#"><img src="img/" alt="BOSCH" width="220" height="145"></a>
+          </li>
+          <li><a href="#"><img src="img/" alt="MAKITA" width="220" height="145"></a></li>
+          <li><a href="#"><img src="img/" alt="DeWALT" width="220" height="145"></a></li>
+          <li><a href="#"><img src="img/" alt="ИНТЕРСКОЛ" width="220" height="145"></a></li>
+          <li><a href="#"><img src="img/" alt="HITACHI" width="220" height="145"></a></li>
+          <li><a href="#"><img src="img/" alt="LG" width="220" height="145"></a></li>
+          <li><a href="#"><img src="img/" alt="AEG" width="220" height="145"></a></li>
+          <li><a href="#"><img src="img/" alt="metabo" width="220" height="145"></a></li>
+        </ul>
+      </section><!--Конец ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛЯ-->
 
     </main>
 
