index.html: добавлены СЕРВИСЫ и О КОМПАНИИ

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
     <main class="container">
 
+      <!--ПРЕДЛОЖЕНИЯ-->
       <ul class="propositions">
         <li class="materials new">
           <div><img src="#" alt="Материалы"  width="300" height="123"></div>
@@ -90,7 +91,7 @@
           <div><img src="#" alt="Доставка" width="300" height="123"></div>
           <a href="#" class="btn">Бесплатно</a>
         </li>
-      </ul>
+      </ul><!--конец ПРЕДЛОЖЕНИЯ-->
 
       <!--СЛАЙДЕР-->
       <div class="slider">
@@ -163,7 +164,51 @@
           <li><a href="#"><img src="img/" alt="AEG" width="220" height="145"></a></li>
           <li><a href="#"><img src="img/" alt="metabo" width="220" height="145"></a></li>
         </ul>
-      </section><!--Конец ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛЯ-->
+      </section><!--Конец ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ-->
+
+     <!--СЕРВИСЫ-->
+      <section class="services">
+        <h2>Сервисы</h2>
+        <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        
+        <ul class="services-list">
+          <li class="delivery"><a href="#">Доставка</a></li>
+          <li class="guaranty"><a href="#">Гарантия</a></li>
+          <li class="credit"><a href="#">Кредит</a></li>
+        </ul>
+        
+        <div class="delivery">
+          <h3>Доставка</h3>
+          <img src="img/" alt="логотип доставки" alt="" width="">
+          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш на этаж!</p>
+        </div> 
+      </section><!--Конец СЕРВИСЫ-->
+
+      <!--О КОМПАНИИ-->
+      <article class="about-company">
+
+        <div class="left-column">
+          <h2>Компания «Техномарт»</h2>
+          <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.</p>
+          <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями: </p>
+          <ul>
+            <li>Деловые линии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖелДорЭкспедиция</li>
+          </ul>
+          <a href="#" class="btn">Подробнее о компании</a>
+        </div>
+
+        <div class="right-column">
+          <h2>Контакты</h2>
+          <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+          <div>
+            <img src="img/" alt="карта проезда" width="300" height="158" >
+            </div>
+          <a href="#" class="btn">Заблудились? Напишите нам</a>
+        </div>
+      </article><!--крнец О КОМПАНИИ-->
+
 
     </main>
 
