--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="main-checkout btn">
           <a href="#">Оформить заказ</a>
         </div>
-      </div><!--КОНЕЦ ТОП ХЕДЕРА-->
+      </div><!--конец ТОП ХЕДЕР-->
 
       <!--РЕГИСТРАЦИЯ)-->
       <div class="main-login">
@@ -65,7 +65,7 @@
           <li><a href="#">Контакта</a></li>
         </ul>
       </nav>
-    </header>
+    </header><!--КОНЕЦ ТОП ХЕДЕРА-->
 
     <main class="container">
 
@@ -124,21 +124,25 @@
         <ul>
           <li>
             <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 9000" width="220" height="318" ></a>
+            <p><a href="#">Перфоратор BOSH BFG 9000</a></p>
             <p><s class="old-price">32500</s></p>
             <p class="new-price">25500</p>
           </li>
           <li>
             <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="220" height="318"></a>
+            <p><a href="#">Перфоратор BOSH BFG 3000</a></p>
             <p><s class="old-price">22500</s></p>
             <p class="new-price">15500</p>
           </li>
           <li>
             <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="220" height="318"></a>
+            <p><a href="#">Перфоратор BOSH BFG 6000</a></p>
             <p><s class="old-price">30500</s></p>
             <p class="new-price">25500</p>
           </li>
           <li>
             <a href="#"><img src="img/" class="new" alt="Перфоратор BOSH BFG 2000" width="220" height="318"></a>
+            <p><a href="#">Перфоратор BOSH BFG 2000</a></p>
             <p><s class="old-price"></s></p>
             <p class="new-price">12500</p>
           </li>
