--- a/index.html
+++ b/index.html
@@ -40,11 +40,9 @@
       <!--РЕГИСТРАЦИЯ)-->
       <div class="main-login">
         <p>Интернет магазин строительных материалов и инструментов для ремонта</p>
-        <address>
-          <div class="main-telephone">+7(812)55-05-55</div>
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д 19/8</p>
-        </address>
-
+        <div class="main-telephone">+7(812)55-05-55</div>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д 19/8</p>
+        
         <div class="btn main-login">
            <a href="#">Войти</a>
         </div>
@@ -212,9 +210,63 @@
           <a href="#" class="btn">Заблудились? Напишите нам</a>
         </div>
       </article><!--крнец О КОМПАНИИ-->
-
-
     </main>
+
+    <!--FOOTER-->
+    <footer class="main-footer">
+      <div class="top-footer">
+        <div class="main-logo">
+          <a href="#"><h1>Техномарт</h1></a>
+        </div>       
+        <address>
+          г.Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          +7 (812) 555-05-55
+        </address>
+        <nav class="nav1-footer">
+          <ul>
+            <li><a href="#">Компания</a></li>
+            <li><a href="#"></a>Новости</li>
+            <li><a href="#"></a>Каталог</li>
+            <li><a href="#"></a>Доставка</li>
+            <li><a href="#"></a>Контакты</li>
+          </ul>
+        </nav>
+        <nav class="footer2">
+          <nav class="nav2-footer">
+            <ul>
+              <li><a href="#">Материалы</a></li>
+              <li><a href="#">Техника</a></li>
+              <li><a href="#">Инструменты</a></li>
+              <li><a href="#">Спецпердложения</a></li>
+            </ul>
+          </nav>
+        </nav>
+      </div>
+
+      <div class="bottom-footer">
+        <small>
+          &copy 2010-2016 Компания «Техномарт»<br>
+          Все права защищены
+        </small>
+        <address>
+          <p class="social">
+            <a href="" class="btn-social vk">ВКонтакте</a>
+            <a href="" class="btn-social facebook">Facebook</a>
+            <a href="" class="btn-social instagram">Instagram</a>
+          </p>
+
+          <p>
+            Обратная связь:<br>
+            <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </p>
+
+          <p>
+            Разработано<br>
+            <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+          </p>
+        </address>
+      </div>
+    </footer>
 
   </body>
 </html>
