index.html: исправлены ошибки

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <section>
         <div class="wrapper">
           <h2>Популярные производители</h2>
-          <a href="btn popular"></a>
+          <a href="#" class="btn popular">Все производители</a>
         </div>
 
         <ul>
@@ -181,7 +181,7 @@
         
         <div class="delivery">
           <h3>Доставка</h3>
-          <img src="img/" alt="логотип доставки" alt="" width="">
+          <img src="img/" alt="логотип доставки"  width="468" height="261">
           <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш на этаж!</p>
         </div> 
       </section><!--Конец СЕРВИСЫ-->
@@ -194,9 +194,9 @@
           <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.</p>
           <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями: </p>
           <ul>
-            <li>Деловые линии</li>
-            <li>Автотрейдинг</li>
-            <li>ЖелДорЭкспедиция</li>
+            <li><a href="#">Деловые линии</a></li>
+            <li><a href="#">Автотрейдинг</a></li>
+            <li><a href="#">ЖелДорЭкспедиция</a></li>
           </ul>
           <a href="#" class="btn">Подробнее о компании</a>
         </div>
@@ -245,7 +245,7 @@
 
       <div class="bottom-footer">
         <small>
-          &copy 2010-2016 Компания «Техномарт»<br>
+          &copy; 2010-2016 Компания «Техномарт»<br>
           Все права защищены
         </small>
         <address>
