--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
           <li><a href="#">Новости</a></li>
           <li><a href="#">Спецпредложения</a></li>
           <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакта</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
-    </header><!--КОНЕЦ ТОП ХЕДЕРА-->
+    </header><!--КОНЕЦ  ХЕДЕРА-->
 
     <main class="container">
 
