catalog.html: добавил breadcrumbs

--- a/catalog.html
+++ b/catalog.html
@@ -65,7 +65,14 @@
       </nav>
     </header><!--КОНЕЦ  ХЕДЕРА-->
 
-    
+    <main class="container">
+      <ul class="breadcrumbs">
+        <li><a href="#">Домашняя страница</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><a href="#">Перфораторы</a></li>
+      </ul>
+    </main>
     
   </body>
 </html>
