catalog.html: исправил HEADER/  вывод выбранного товара и его фильтр

--- a/catalog.html
+++ b/catalog.html
@@ -43,7 +43,7 @@
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д 19/8</p>
         
         <div class="user-info">
-           <p>Равшан Джамшутович</p>
+           <p>Равшан Джамшутович <a href="#">Выход</a></p>
            <ul>
              <li><a href="#">Мои заказы</a></li>
              <li><a href="#">Личный кабинет</a></li>
@@ -115,8 +115,78 @@
             <input type="submit" value="Показать">
           </fieldset>
         </form><!--конец ФИЛЬТР-->
+
+        <!--выбранный ТОВАР-->
+        <div class="items">
+
+          <!--СОРТИРОВКА-->
+          <div class="sorting">
+            Сортировка: 
+            <a href="#">По цене</a>
+            <a href="#">По типу</a>
+            <a href="#">По функционалу</a>
+          </div>
+
+          <!--СПИСОК ТОВАРА-->
+          <ul class="items">
+            <li>
+              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 3000" width="220" height="318"></a></div>
+              <a href="#">Перфорато BOSH BFG 3000</a>
+            </li>
+            <li>
+              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 6000" width="220" height="318"></a></div>
+              <a href="#">Перфорато BOSH BFG 6000</a>
+            </li>
+            <li>
+              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 2000" width="220" height="318"></a></div>
+              <a href="#">Перфорато BOSH BFG 2000</a>
+            </li>
+            <li>
+              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 3000" width="220" height="318"></a></div>
+              <a href="#">Перфорато BOSH BFG 3000</a>
+            </li>
+            <li>
+              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 6000" width="220" height="318"></a></div>
+              <a href="#">Перфорато BOSH BFG 6000</a>
+            </li>
+            <li>
+              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 2000" width="220" height="318"></a></div>
+              <a href="#">Перфорато BOSH BFG 2000</a>
+            </li>
+            <li>
+              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 3000" width="220" height="318"></a></div>
+              <a href="#">Перфорато BOSH BFG 3000</a>
+            </li>
+            <li>
+              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 6000" width="220" height="318"></a></div>
+              <a href="#">Перфорато BOSH BFG 6000</a>
+            </li>
+            <li>
+              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 2000" width="220" height="318"></a></div>
+              <a href="#">Перфорато BOSH BFG 2000</a>
+            </li>
+          </ul>
+        </div><!--конец ВЫБРАННЫЙ ТОВАР-->
+
+        <!--КНОПКИ ПЕРЕХОДА между страницами товара-->
+        <div class="buttons">
+          <a href="#" class="btn">1</a>
+          <a href="#" class="btn">2</a>
+          <a href="#" class="btn">3</a>
+          <a href="#" class="btn">Следующая</a>
+          </div>
+        </div>        
       </article>
+
+      <aside>
+       <h1>Пара слов о перфораторах</h1>
+       <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
+       Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
+       В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+      </aside>
     </main>
+
+
     
   </body>
 </html>
