--- a/catalog.html
+++ b/catalog.html
@@ -74,7 +74,7 @@
       </ul>
 
       <article>
-        <h1>Перфораторы</h1>
+        <h2>Перфораторы</h2>
 
         <!--ФИЛЬТР-->
         <form action="https://echo.htmlacademy.ru" method="post">
@@ -86,8 +86,8 @@
               <input type="range" name="max-cost" class="range-cost" value="30000" min="0" max="50000">
               
               <p>
-                <input type="number" name="min-cost" class="min-cost" value="0" min="0" > -
-                <input type="number" name="max-cost" class="max-cost" value="30000" min="0" >
+                <input type="number" name="min-cost" class="min-cost" value="0" min="0" max="50000" > -
+                <input type="number" name="max-cost" class="max-cost" value="30000" min="0" max="50000">
               </p>  
             </fieldset><!--конец ЦЕНА фильтр-->
             
@@ -174,12 +174,11 @@
           <a href="#" class="btn">2</a>
           <a href="#" class="btn">3</a>
           <a href="#" class="btn">Следующая</a>
-          </div>
-        </div>        
+        </div>
       </article>
 
       <aside>
-       <h1>Пара слов о перфораторах</h1>
+       <h2>Пара слов о перфораторах</h2>
        <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
        Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
        В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
@@ -199,10 +198,10 @@
         <nav class="nav1-footer">
           <ul>
             <li><a href="#">Компания</a></li>
-            <li><a href="#"></a>Новости</li>
-            <li><a href="#"></a>Каталог</li>
-            <li><a href="#"></a>Доставка</li>
-            <li><a href="#"></a>Контакты</li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
         <nav class="footer2">
