--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
         <nav class="nav1-footer">
           <ul>
             <li><a href="#">Компания</a></li>
-            <li><a href="#"></a>Новости</li>
-            <li><a href="#"></a>Каталог</li>
-            <li><a href="#"></a>Доставка</li>
-            <li><a href="#"></a>Контакты</li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
         <nav class="footer2">
