логотип сделан ссылкой на главную страницу

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        
         <!--ЛОГОТИП-->
         <div class="main-logo">
-          <a href="#"><h1>Техномарт</h1></a>
+          <a href="index.html"><h1>Техномарт</h1></a>
         </div>
        
         <ul>
@@ -216,7 +216,7 @@
     <footer class="main-footer">
       <div class="top-footer">
         <div class="main-logo">
-          <a href="#"><h1>Техномарт</h1></a>
+          <a href="index.html"><h1>Техномарт</h1></a>
         </div>       
         <address>
           г.Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
