--- a/index.html
+++ b/index.html
@@ -173,17 +173,30 @@
         <h2>Сервисы</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         
-        <ul class="services-list">
-          <li class="delivery"><a href="#">Доставка</a></li>
-          <li class="guaranty"><a href="#">Гарантия</a></li>
-          <li class="credit"><a href="#">Кредит</a></li>
-        </ul>
-        
-        <div class="delivery">
-          <h3>Доставка</h3>
-          <img src="img/" alt="логотип доставки"  width="468" height="261">
-          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш на этаж!</p>
-        </div> 
+        <!--Славйдер-->
+        <div class="services slider">
+          <div class="check-slide"></div>
+
+          <div class="slide-delivery">
+            <h3>Доставка</h3>
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!Ведь мы неплохо заработаем, поднимая его на ваш на этаж!</p>
+          </div>
+
+          <div class="slide-guarantee">
+            <h3>Гарантия</h3>
+            <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
+              Дом уж восстановите как-нибудь сами.</p>
+          </div>
+
+          <div class="slide-credit">
+            <h3>Кредит</h3>
+            <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+            <div class="btn">
+              <a href="#">Отправить заявку</a>
+            </div>
+          </div>
+        </div><!--конец СЛАЙДЕР-->
+  
       </section><!--Конец СЕРВИСЫ-->
 
       <!--О КОМПАНИИ-->
