index.html: доработан слайдер

--- a/index.html
+++ b/index.html
@@ -95,14 +95,16 @@
       <div class="slider">
 
         <div class="slide1">
-          <p>Перфораторы</p>
+          <h2>Перфораторы</h2>
+          <p>Настоящие мужские игрушки</p>
           <div class="btn">
             <a href="#">Открыть каталог</a>
           </div>
         </div>
 
         <div class="slide2">
-          <p>Дрели</p>
+          <h2>Дрели</h2>
+          <p>Соседям на радость</p>
           <div class="btn">
             <a href="#">Открыть каталог</a>
           </div>
