index.html: исправил кнопки регистрации/входа

--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@
         <div class="main-telephone">+7(812)55-05-55</div>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д 19/8</p>
         
-        <div class="btn main-login">
-           <a href="#">Войти</a>
-        </div>
-        <div class="btn main-registration">
-          <a href="#">Регистрация</a>
+        <div class="main-login">
+         <a href="#" class="btn">Войти</a>
+         <a href="#" class="btn">Регистрация</a>
         </div>
       </div><!--Конец РЕГИСТРАЦИЯ-->
 
