--- a/catalog.html
+++ b/catalog.html
@@ -68,7 +68,7 @@
         <li><a href="#">Домашняя страница</a></li>
         <li><a href="#">Каталог</a></li>
         <li><a href="#">Инструмент</a></li>
-        <li><a href="#">Перфораторы</a></li>
+        <li>>Перфораторы</li>
       </ul>
 
       <article>
