добавлен label к input-ам

--- a/catalog.html
+++ b/catalog.html
@@ -93,11 +93,11 @@
             <fieldset class="manufacturers">
               <legend>Производители</legend>
               <ul>
-                <li><input type="checkbox" name="manufacturers[]" value="bosh" checked>BOSH</li>
-                <li><input type="checkbox" name="manufacturers[]" value="interskol">ИНТЕРСКОЛ</li>
-                <li><input type="checkbox" name="manufacturers[]" value="makita" checked>MAKITA</li>
-                <li><input type="checkbox" name="manufacturers[]" value="dewalt">DEWALT</li>
-                <li><input type="checkbox" name="manufacturers[]" value="hitachi">HITACHI</li>
+                <label><li><input type="checkbox" name="manufacturers[]" value="bosh" checked>BOSH</li></label>
+                <label><li><input type="checkbox" name="manufacturers[]" value="interskol">ИНТЕРСКОЛ</li></label>
+                <label><li><input type="checkbox" name="manufacturers[]" value="makita" checked>MAKITA</li></label>
+                <label><li><input type="checkbox" name="manufacturers[]" value="dewalt">DEWALT</li></label>
+                <label><li><input type="checkbox" name="manufacturers[]" value="hitachi">HITACHI</li></label>
               </ul>
             </fieldset><!--конец ПРОИЗВОДИТЕЛИ фильтр-->
 
@@ -105,9 +105,9 @@
             <fieldset class="supply">
               <legend>Питание</legend>
               <ul>
-                <li><input type="radio" name="supply" value="battery-supply" checked>Аккумуляторные</li>
-                <li><input type="radio" name="supply" value="general-supply">Сетевые</li>
-              </ul>
+                <label><li><input type="radio" name="supply" value="battery-supply" checked>Аккумуляторные</li></label>
+                <label><li><input type="radio" name="supply" value="general-supply">Сетевые</li>
+              </ul></label>
             </fieldset><!--конец ПИТАНИЕ фильтр-->
 
             <input type="submit" value="Показать">
