--- a/catalog.html
+++ b/catalog.html
@@ -78,15 +78,12 @@
         <form action="https://echo.htmlacademy.ru" method="post">
           <fieldset>
             <legend>Фильтр</legend>
-            <!--ЦЕНА фильтр    ??????????????? как связать между собой значения range и number????7-->
             <fieldset class="cost-filter">
               <legend>Цена</legend>
-              <input type="range" name="max-cost" class="range-cost" value="30000" min="0" max="50000">
-              
-              <p>
-                <input type="number" name="min-cost" class="min-cost" value="0" min="0" max="50000" > -
-                <input type="number" name="max-cost" class="max-cost" value="30000" min="0" max="50000">
-              </p>  
+                <input type="range" name="max-cost" class="range-cost" value="30000" min="0" max="50000">
+                <p>
+                  <input type="number" name="min-cost" class="min-cost" value="0" min="0" max="50000" > -<input type="number" name="max-cost" class="max-cost" value="30000" min="0" max="50000">
+                </p>  
             </fieldset><!--конец ЦЕНА фильтр-->
             
             <!--ПРОИЗВОДИТЕЛЬ фильтр-->
