удалил div-ы в списке товаров

--- a/catalog.html
+++ b/catalog.html
@@ -125,40 +125,40 @@
           <!--СПИСОК ТОВАРА-->
           <ul class="items">
             <li>
-              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 3000" width="220" height="318"></a></div>
-              <a href="#">Перфорато BOSH BFG 3000</a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="220" height="318"></a>
+              <a href="#">Перфоратор BOSH BFG 3000</a>
             </li>
             <li>
-              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 6000" width="220" height="318"></a></div>
-              <a href="#">Перфорато BOSH BFG 6000</a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="220" height="318"></a>
+              <a href="#">Перфоратор BOSH BFG 6000</a>
             </li>
             <li>
-              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 2000" width="220" height="318"></a></div>
-              <a href="#">Перфорато BOSH BFG 2000</a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 2000" width="220" height="318"></a>
+              <a href="#">Перфоратор BOSH BFG 2000</a>
             </li>
             <li>
-              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 3000" width="220" height="318"></a></div>
-              <a href="#">Перфорато BOSH BFG 3000</a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="220" height="318"></a>
+              <a href="#">Перфоратор BOSH BFG 3000</a>
             </li>
             <li>
-              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 6000" width="220" height="318"></a></div>
-              <a href="#">Перфорато BOSH BFG 6000</a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="220" height="318"></a>
+              <a href="#">Перфоратор BOSH BFG 6000</a>
             </li>
             <li>
-              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 2000" width="220" height="318"></a></div>
-              <a href="#">Перфорато BOSH BFG 2000</a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 2000" width="220" height="318"></a>
+              <a href="#">Перфоратор BOSH BFG 2000</a>
             </li>
             <li>
-              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 3000" width="220" height="318"></a></div>
-              <a href="#">Перфорато BOSH BFG 3000</a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="220" height="318"></a>
+              <a href="#">Перфоратор BOSH BFG 3000</a>
             </li>
             <li>
-              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 6000" width="220" height="318"></a></div>
-              <a href="#">Перфорато BOSH BFG 6000</a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="220" height="318"></a>
+              <a href="#">Перфоратор BOSH BFG 6000</a>
             </li>
             <li>
-              <div><a href="#"><img src="img/" alt="Перфорато BOSH BFG 2000" width="220" height="318"></a></div>
-              <a href="#">Перфорато BOSH BFG 2000</a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 2000" width="220" height="318"></a>
+              <a href="#">Перфоратор BOSH BFG 2000</a>
             </li>
           </ul>
         </div><!--конец ВЫБРАННЫЙ ТОВАР-->
