--- a/catalog.html
+++ b/catalog.html
@@ -125,39 +125,40 @@
           <!--СПИСОК ТОВАРА-->
           <ul class="items">
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="220" height="318"></a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 3000</a>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="220" height="318"></a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
               <a href="#">Перфоратор BOSH BFG 6000</a>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 2000" width="220" height="318"></a>
+              <a href="#" class="btn">Купить</a>
+              <a href="#" class="btn">В закладки</a>
               <a href="#">Перфоратор BOSH BFG 2000</a>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="220" height="318"></a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 3000</a>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="220" height="318"></a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
               <a href="#">Перфоратор BOSH BFG 6000</a>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 2000" width="220" height="318"></a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 2000</a>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="220" height="318"></a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 3000</a>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="220" height="318"></a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
               <a href="#">Перфоратор BOSH BFG 6000</a>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 2000" width="220" height="318"></a>
+              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 2000</a>
             </li>
           </ul>
