добавлены цены на товары

--- a/catalog.html
+++ b/catalog.html
@@ -127,39 +127,54 @@
             <li>
               <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 3000</a>
+              <s class="price-old">22500 Р.</s>
+              <span class="price-new">15500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
               <a href="#">Перфоратор BOSH BFG 6000</a>
+              <s class="price-old">30500 Р.</s>
+              <span class="price-new">25500 Р.</span>
             </li>
             <li>
               <a href="#" class="btn">Купить</a>
               <a href="#" class="btn">В закладки</a>
               <a href="#">Перфоратор BOSH BFG 2000</a>
+              <span class="price-new">12500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 3000</a>
+              <s class="price-old">22500 Р.</s>
+              <span class="price-new">15500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
               <a href="#">Перфоратор BOSH BFG 6000</a>
+              <s class="price-old">30500 Р.</s>
+              <span class="price-new">25500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 2000</a>
+              <span class="price-new">12500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 3000</a>
+              <s class="price-old">22500 Р.</s>
+              <span class="price-new">15500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
               <a href="#">Перфоратор BOSH BFG 6000</a>
+              <s class="price-old">30500 Р.</s>
+              <span class="price-new">25500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 2000</a>
+              <span class="price-new">12500 Р.</span>
             </li>
           </ul>
         </div><!--конец ВЫБРАННЫЙ ТОВАР-->
