--- a/index.html
+++ b/index.html
@@ -122,27 +122,26 @@
         <ul>
           <li>
             <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 9000" width="184" height="164" ></a>
-            <p><a href="#">Перфоратор BOSH BFG 9000</a></p>
-            <p><s class="old-price">32500</s></p>
-            <p class="new-price">25500</p>
+            <a href="#">Перфоратор BOSH BFG 9000</a>
+            <s class="price-old">32500</s>
+            <span class="price-new">25500</span>>
           </li>
           <li>
             <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
-            <p><a href="#">Перфоратор BOSH BFG 3000</a></p>
-            <p><s class="old-price">22500</s></p>
-            <p class="new-price">15500</p>
+            <a href="#">Перфоратор BOSH BFG 3000</a>
+            <s class="price-old">22500</s>
+            <span class="price-new">15500</span>>
           </li>
           <li>
             <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
-            <p><a href="#">Перфоратор BOSH BFG 6000</a></p>
-            <p><s class="old-price">30500</s></p>
-            <p class="new-price">25500</p>
+            <a href="#">Перфоратор BOSH BFG 6000</a>
+            <s class="price-old">30500</s>
+            <span class="price-new">25500</span>
           </li>
           <li>
             <a href="#"><img src="img/" class="new" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
-            <p><a href="#">Перфоратор BOSH BFG 2000</a></p>
-            <p><s class="old-price"></s></p>
-            <p class="new-price">12500</p>
+            <a href="#">Перфоратор BOSH BFG 2000</a>
+            <span class="price-new">12500</span>
           </li>
         </ul>
       </section><!--конец ПОПУЛЯРНЫЕ ТОВАРЫ-->
