подготовлены изображения / добавлены контентные в верстку

--- a/catalog.html
+++ b/catalog.html
@@ -125,13 +125,13 @@
           <!--СПИСОК ТОВАРА-->
           <ul class="items">
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
+              <a href="#"><img src="img/content/tools/bfg-3000.jpg" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 3000</a>
               <s class="price-old">22500 Р.</s>
               <span class="price-new">15500 Р.</span>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
+              <a href="#"><img src="img/content/tools/bfg-6000.jpg" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
               <a href="#">Перфоратор BOSH BFG 6000</a>
               <s class="price-old">30500 Р.</s>
               <span class="price-new">25500 Р.</span>
@@ -143,36 +143,36 @@
               <span class="price-new">12500 Р.</span>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
+              <a href="#"><img src="img/content/tools/bfg-3000.jpg" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 3000</a>
               <s class="price-old">22500 Р.</s>
               <span class="price-new">15500 Р.</span>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
+              <a href="#"><img src="img/content/tools/bfg-6000.jpg" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
               <a href="#">Перфоратор BOSH BFG 6000</a>
               <s class="price-old">30500 Р.</s>
               <span class="price-new">25500 Р.</span>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
+              <a href="#"><img src="img/content/tools/bfg-2000.jpg" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 2000</a>
               <span class="price-new">12500 Р.</span>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
+              <a href="#"><img src="img/content/tools/bfg-3000.jpg" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 3000</a>
               <s class="price-old">22500 Р.</s>
               <span class="price-new">15500 Р.</span>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
+              <a href="#"><img src="img/content/tools/bfg-6000.jpg" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
               <a href="#">Перфоратор BOSH BFG 6000</a>
               <s class="price-old">30500 Р.</s>
               <span class="price-new">25500 Р.</span>
             </li>
             <li>
-              <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
+              <a href="#"><img src="img/content/tools/bfg-2000.jpg" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
               <a href="#">Перфоратор BOSH BFG 2000</a>
               <span class="price-new">12500 Р.</span>
             </li>
