--- a/index.html
+++ b/index.html
@@ -121,25 +121,25 @@
         
         <ul>
           <li>
-            <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 9000" width="184" height="164" ></a>
+            <a href="#"><img src="img/content/tools/bfg-9000.jpg" alt="Перфоратор BOSH BFG 9000" width="184" height="164" ></a>
             <a href="#">Перфоратор BOSH BFG 9000</a>
             <s class="price-old">32500</s>
-            <span class="price-new">25500</span>>
+            <span class="price-new">25500</span>
           </li>
           <li>
-            <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
+            <a href="#"><img src="img/content/tools/bfg-3000.jpg" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
             <a href="#">Перфоратор BOSH BFG 3000</a>
             <s class="price-old">22500</s>
-            <span class="price-new">15500</span>>
+            <span class="price-new">15500</span>
           </li>
           <li>
-            <a href="#"><img src="img/" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
+            <a href="#"><img src="img/content/tools/bfg-6000.jpg" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
             <a href="#">Перфоратор BOSH BFG 6000</a>
             <s class="price-old">30500</s>
             <span class="price-new">25500</span>
           </li>
           <li>
-            <a href="#"><img src="img/" class="new" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
+            <a href="#"><img src="img/content/tools/bfg-2000.jpg" class="new" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
             <a href="#">Перфоратор BOSH BFG 2000</a>
             <span class="price-new">12500</span>
           </li>
@@ -155,15 +155,15 @@
 
         <ul>
           <li>
-            <a href="#"><img src="img/" alt="BOSCH" width="126" height="37"></a>
+            <a href="#"><img src="img/content/brends/bosch.jpg" alt="BOSCH" width="126" height="37"></a>
           </li>
-          <li><a href="#"><img src="img/" alt="MAKITA" width="123" height="40"></a></li>
-          <li><a href="#"><img src="img/" alt="DeWALT" width="146" height="44"></a></li>
-          <li><a href="#"><img src="img/" alt="ИНТЕРСКОЛ" width="200" height="88"></a></li>
-          <li><a href="#"><img src="img/" alt="HITACHI" width="169" height="31"></a></li>
-          <li><a href="#"><img src="img/" alt="LG" width="121" height="73"></a></li>
-          <li><a href="#"><img src="img/" alt="AEG" width="151" height="96"></a></li>
-          <li><a href="#"><img src="img/" alt="metabo" width="204" height="69"></a></li>
+          <li><a href="#"><img src="img/content/brends/Makita.jpg" alt="MAKITA" width="123" height="40"></a></li>
+          <li><a href="#"><img src="img/content/brends/DeWALT.jpg" alt="DeWALT" width="146" height="44"></a></li>
+          <li><a href="#"><img src="img/content/brends/intercol.jpg" alt="ИНТЕРСКОЛ" width="200" height="88"></a></li>
+          <li><a href="#"><img src="img/content/brends/Hitachi.jpg" alt="HITACHI" width="169" height="31"></a></li>
+          <li><a href="#"><img src="img/content/brends/LG.jpg" alt="LG" width="121" height="73"></a></li>
+          <li><a href="#"><img src="img/content/brends/AEG.jpg" alt="AEG" width="151" height="96"></a></li>
+          <li><a href="#"><img src="img/content/brends/Metabo.jpg" alt="metabo" width="204" height="69"></a></li>
         </ul>
       </section><!--Конец ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ-->
 
@@ -217,7 +217,7 @@
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
           <div>
-            <img src="img/" alt="карта проезда" width="300" height="158" >
+            <img src="img/content/map.jpg" alt="карта проезда" width="300" height="158" >
             </div>
           <a href="#" class="btn">Заблудились? Напишите нам</a>
         </div>
