добавлено часть стилей по шрифтам

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
 
@@ -68,22 +70,20 @@
 
         <div class="items">
           <div class="materials new">
-            Материалы
+            <span>Материалы</span>
             <a href="#" class="btn">На любой вкус</a>
           </div>
           <div class="tools">
-            Инструмент
+            <span>Инструмент</span>
             <a href="#" class="btn">На все случаи</a>
           </div>
           <div class="equipment">
-            Техника
+            <span>Техника</span>
             <a href="#" class="btn">Для стройки</a>
           </div>
         </div>
        
-        <div class="items">
-          
-          <!--СЛАЙДЕР-->
+       <!--СЛАЙДЕР-->
           <div class="slider">
             <div class="slide1">
               <h4>Перфораторы</h4>
@@ -98,12 +98,13 @@
             <div class="slider-controls"></div>
           </div><!--rконец СЛАЙДЕР-->
 
+        <div class="items">
           <div class="sale">
-            Скидки 50%
+            <span>Скидки 50%</span>
             <a href="#" class="btn">На 350 товаров</a>
           </div>
           <div class="delivery">
-            Доставка
+            <span>Доставка</span>
             <a href="#" class="btn">Бесплатно</a>
           </div>
         </div>
