--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Техномарт-Каталог</title>
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <!--HEADER-->
@@ -41,11 +43,11 @@
         
         <div class="login">
          <a href="#">Равшан Джамшутович</a>
-         <ul>
+        </div>
+        <ul>
            <li><a href="#">Мои заказы</a></li>
            <li><a href="#">Личный кабинет</a></li>
-         </ul>
-        </div>
+        </ul>
       </div><!--Конец РЕГИСТРАЦИЯ-->
 
       <!--НАВИГАЦИЯ-->
@@ -68,7 +70,7 @@
         <li><a href="#">Домашняя страница</a></li>
         <li><a href="#">Каталог</a></li>
         <li><a href="#">Инструмент</a></li>
-        <li>>Перфораторы</li>
+        <li>Перфораторы</li>
       </ul>
 
       <article>
